# acba_internship

linear-regression-api/: .dockerignore  .gitignore  app.py  linear_regression.py  requirements.txt  send_request.py
task1/: DockerFileOrdinary  main.py
task1-astral_rye/fastapi-hello/: Dockerfile  README.md  pyproject.toml  task1.py
task1-astral_rye/fastapi-hello/src/fastapi_hello/: __init__.py
task_2__Linear_Regression/: readme.md
