[project]
name = "fastapi-hello"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "laurabaldryan", email = "63228952+laurabaldrayan@users.noreply.github.com" }
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_hello"]
